--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
 <title>Projet Slam n°1</title>
 </head>
 <body>
+		<!-- Global site tag (gtag.js) - Google Analytics -->
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-F514CJNH2F"></script>
+	<script>
+  	window.dataLayer = window.dataLayer || [];
+  	function gtag(){dataLayer.push(arguments);}
+  	gtag('js', new Date());
+
+  	gtag('config', 'G-F514CJNH2F');
+	</script>
 	<img class="ssbuLogo2" src="images/SmashBall.png">
 	<br><br><br><br><br>
 	<div class="ssbu">
