--- a/index.html
+++ b/index.html
@@ -8,13 +8,13 @@
 </head>
 <body>
 		<!-- Global site tag (gtag.js) - Google Analytics -->
-	<script async src="https://www.googletagmanager.com/gtag/js?id=G-5JJ6J8Z965"></script>
+	<script async src="https://www.googletagmanager.com/gtag/js?id=G-F514CJNH2F"></script>
 	<script>
   	window.dataLayer = window.dataLayer || [];
   	function gtag(){dataLayer.push(arguments);}
   	gtag('js', new Date());
 
-  	gtag('config', 'G-5JJ6J8Z965');
+  	gtag('config', 'G-F514CJNH2F');
 	</script>
 	<img class="ssbuLogo2" src="images/SmashBall.png">
 	<br><br><br><br><br>
